# gadget_compression

./: README.md  pyproject.toml
src/gadget_compression/: compress.py
